--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,88 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ededed"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/main_bt1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="打电话(权限)" />
+                android:text="打电话(权限)"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="开相册(权限)" />
+                android:text="开相册(权限)"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="弹出Dialog" />
+                android:text="弹出Dialog"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="程序崩溃(测试热修复)" />
+                android:text="程序崩溃(测试热修复)"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="在线视频播放" />
+                android:text="在线视频播放"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="RecyclerView动画" />
+                android:text="RecyclerView动画"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="ViewPager适配器模式" />
+                android:text="ViewPager适配器模式"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="密码框" />
+                android:text="密码框"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="IPC程守护" />
+                android:text="IPC程守护"
+                android:textColor="@color/main_tv_color" />
 
             <Button
                 android:id="@+id/main_bt10"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="@color/main_bt_bg"
                 android:gravity="center"
-                android:text="插件换肤" />
+                android:text="插件换肤"
+                android:textColor="@color/main_tv_color" />
 
 
             <ImageView
@@ -94,4 +127,4 @@
         </LinearLayout>
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
